--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en"><head>
 
   <title>&ensp;Saintgits MCA Department</title>
-<link rel="icon" href="..images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
-<link rel="canonical" href="https://saintgits-mca.github.io/" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
+<link rel="canonical" href="https://saintgits-mca.github.io">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="title" content="Saintgits MCA Department">
 <meta name="description" content="Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.">
 <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
 <meta name="language" content="English">
  </head>
 <body><font size="4.5">
-<img src="..images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
-<img src="..images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
+<img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
+<img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
 <div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
 <br>
 <center style="font-size:19;"><b>
-&ensp;<a href="https://saintgits-mca.github.io/" style="color:snow;text-decoration:none;">Home</a>
+&ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
 &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
@@ -26,7 +26,7 @@
 </b></center>
 <br>
 </div>
-<center><img src="..images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="300"></center>
+<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="300"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="15" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
@@ -37,49 +37,49 @@
 <br>
 </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
 <br><br>
-  &emsp;&nbsp;<img src="..IMG_20220513_151240.jpg" alt="Saintgits Edge"  width="720" height="600">
+  &emsp;&nbsp;<img src="../IMG_20220513_151240.jpg" alt="Saintgits Edge" width="720" height="600">
 <br><br>
   <center><h2 style="color:Brown;">O u r  &nbsp; &nbsp; C o u r s e s</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
 <center><b style="color:darkgreen">MCA</b></center><br>
 <p align="justify">MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</p><br><br>
-<b><ul style="list-style-type:square">Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b></b><ul style="list-style-type:square"><b>Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OR <br>
                              <br>&nbsp;&nbsp;&nbsp;&nbsp;<li>B. Sc. / B. Com. / B. Ahttps://saintgits-mca.github.io graduate with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</li></i><br><br></ul>
 <center><b style="color:darkgreen">Integrated MCA</b></center><br>
 <p align="justify">Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</p>
 <br><br>
-<b><ul style="list-style-type:square">Eligibility</b><br><br><i> <li>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ul>
+<b></b><ul style="list-style-type:square"><b>Eligibility</b><br><br><i> </i><li><i>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ul>
   <br>
 
 <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70">
-<center><img src="..images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768" height="237"></center><br>
+<center><img src="../images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768" height="237"></center><br>
 <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
     <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
-<h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now>></a></h3></center><br>
+<h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now&gt;&gt;</a></h3></center><br>
 <br></div><br><br>
   <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
     <marquee behavior="alternate" direction="left" scrollamount="17">
-      <img src="..images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider9-150x150.png"  alt="footer-slider9-150x150.png" width="300">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider6.png" alt="footer-slider6-150x150.png"  width="300" >
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300" >
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Industry-Institution-Partnership-Thumbnail.jpg"  alt="Industry-Institution-Partnership-Thumbnail" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Aakash-Thumb.jpg"  alt="Aakash-Thumb" width="300" height="249">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
+      <img src="../images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.png" alt="footer-slider9-150x150.png" width="300">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.png" alt="footer-slider6-150x150.png" width="300">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.jpg" alt="Industry-Institution-Partnership-Thumbnail" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.jpg" alt="Aakash-Thumb" width="300" height="249">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300" height="249">
     </marquee></div>
 <br><br>
-  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="..images/Wipro.jpg" alt="Wipro" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/infy.jpg" alt="infosys" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/TCS.jpg" alt="TCS" width="237" height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Speridian.jpg"   alt="Speridian"  width="237"  height="210">
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Logo-9.jpg"  alt="ibs" width="237" height="194">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/CTS.jpg"   alt="CTS" width="237" height="194">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/sib.jpg" alt="sib" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/Envestnet.jpg" alt="Envestnet" width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/EY.jpg" alt="EY " width="237" height="210">
- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="..images/UST.jpg" alt="UST" width="237" height="210">
-</marquee></div>
+  <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" alt="Wipro" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" alt="infosys" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" alt="TCS" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg" alt="Speridian" width="237" height="210">
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Logo-9.jpg" alt="ibs" width="237" height="194">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/CTS.jpg" alt="CTS" width="237" height="194">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/sib.jpg" alt="sib" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.jpg" alt="Envestnet" width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.jpg" alt="EY " width="237" height="210">
+ &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" alt="UST" width="237" height="210">
+</marquee>
 <br><br><br><br></font>
     <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500">
 <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
@@ -92,23 +92,24 @@
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="color:blue;text-decoration:none;">Infosys Campus Connect <br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="color:blue;text-decoration:none;">Industry Institution Partnership<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
-&nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations & Accreditations<br></a><br>
+&nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
 &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
    <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
-&nbsp;&nbsp;<b style="color:orangered;" text-align="justify" >SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
-<p  style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
+&nbsp;&nbsp;<b style="color:orangered;" text-align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
+<p style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
 P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
-&nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:navy;text-decoration:none" > +91 481 2430349</a>, <a href="tel:2436169" style="color:navy;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:navy;text-decoration:none">2436170</a> <br>
-&nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:navy;text-decoration:none" >mail@saintgits.org</a> 
+&nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:navy;text-decoration:none"> +91 481 2430349</a>, <a href="tel:2436169" style="color:navy;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:navy;text-decoration:none">2436170</a> <br>
+&nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:navy;text-decoration:none">mail@saintgits.org</a> 
 <br></p>
-<h4 style="color:brown" ><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
+<h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
 <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
 &nbsp;&nbsp;Admissions Officer<br>
-&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none" >+91 9961672222</a><br>
-&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none" >ansu.mc@saintgits.org</a><br><br>
+&nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
+&nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br>
 </div>
 <div class="topnav" style="background-color:rgb(32,79,179)">
     <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  </div>
+
 </body></html>
