--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
 <img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
-<div class="topnav" style="background-color:red;border:9px solid red;height:50;" align="left">
+<div class="topnav" style="background-color:red;border:9px solid red;height:50;width:900" align="left">
 <br>
-<center style="font-size:19;"><b>
+<center style="font-size:20;"><b>
 &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
 &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
