--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
 <img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
-<div class="topnav" style="background-color:red;border:9px solid red;height:50;width:900" align="left">
+<div class="topnav" style="background-color:red;border:9px solid red;height:50px;width:900px" align="left">
 <br>
 <center style="font-size:20;"><b>
 &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
@@ -22,7 +22,7 @@
 &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
 &emsp;&ensp;<a href="https://saintgits.org/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
 &emsp;&ensp;<a href="https://saintgits.org/placement/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
-&emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
+&emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
 </b></center>
 <br>
 </div>
