--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body><font size="4.5">
 <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424" height="125">
 <img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486" height="125" align="right">
-<div class="topnav" style="background-color:red;border:9px solid red;height:50px;width:960px" align="left">
+<div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
 <br>
 <center style="font-size:20;"><b>
 &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
