--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-
 <title>&ensp;Saintgits MCA Department</title>
 <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
 <link rel="canonical" href="https://saintgits-mca.github.io">
@@ -26,7 +25,7 @@
 </b></center>
 <br>
 </div>
-<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900" height="300"></center>
+<center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="900px" height="300px"></center>
 <div class="topnav" style="background-color:lightgrey" width="200">
 <center><marquee behavior="scroll" direction="left" scrollamount="15" width="900" height="70"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
 </div><br>
