--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="language" content="English">
    </head>
   <body><font size="4.5">
-  <img src="../images/Header-Stickers5.jpg" alt="Header-Stickers5.jpg" width="424px" height="125px">
-  <img src="../images/Header-Stickers9.jpg" alt="Header-Stickers9.jpg" width="486px" height="125px" align="right">
+  <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
+  <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
   <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
   <br>
   <center style="font-size:20;"><b>
@@ -25,7 +25,7 @@
   </b></center>
   <br>
   </div>
-  <center><img src="../images/Admin-Block.jpg" alt="Admin-Block.jpg" width="950px" height="300px"></center>
+  <center><img src="../images/Admin-Block.webp" alt="Admin-Block.webp" width="900px" height="300px"></center>
   <div class="topnav" style="background-color:lightgrey" width="200">
   <center><marquee behavior="scroll" direction="left" scrollamount="15" width="900px" height="70px"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp;&emsp;&emsp;****</marquee></center>
   </div><br>
@@ -36,7 +36,7 @@
   <br>
   </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
   <br><br>
-    &emsp;&nbsp;<img src="../IMG_20220513_151240.jpg" alt="Saintgits Edge" width="720px" height="600px">
+    &emsp;&nbsp;<img src="../IMG_20220513_151240.webp" alt="Saintgits Edge" width="720px" height="600px">
   <br><br>
     <center><h2 style="color:Brown;">O u r  &nbsp; &nbsp; C o u r s e s</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
   <center><b style="color:darkgreen">MCA</b></center><br>
@@ -51,33 +51,33 @@
     <br>
   
   <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70px">
-  <center><img src="../images/Campus-Life-4-768x189.jpg" alt="Campus Life" width="768px" height="237px"></center><br>
+  <center><img src="../images/Campus-Life-4-768x189.webp" alt="Campus Life" width="768px" height="237px"></center><br>
   <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
       <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
   <h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now&gt;&gt;</a></h3></center><br>
   <br></div><br><br>
     <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
       <marquee behavior="alternate" direction="left" scrollamount="17">
-        <img src="../images/footer-slider13-150x150.jpg" alt="footer-slider13-150x150.jpg" width="250px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.png" alt="footer-slider9-150x150.png" width="300px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.png" alt="footer-slider6-150x150.png" width="300px">
-     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.png" alt="footer-slider10-150x150.png" width="300px">
-      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.jpg" alt="Industry-Institution-Partnership-Thumbnail" width="300px" height="249px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.jpg" alt="Aboutus-Infosys-Thumb" width="300px" height="249px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.jpg" alt="Aakash-Thumb" width="300px" height="249px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.png" alt="footer-slider2-150x150" width="300px" height="249px">
+        <img src="../images/footer-slider13-150x150.webp" alt="footer-slider13-150x150.webp" width="250px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.webp" alt="footer-slider9-150x150.webp" width="300px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.webp" alt="footer-slider6-150x150.webp" width="300px">
+     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.webp" alt="footer-slider10-150x150.webp" width="300px">
+      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.webp" alt="Industry-Institution-Partnership-Thumbnail" width="300px" height="249px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.webp" alt="Aboutus-Infosys-Thumb" width="300px" height="249px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.webp" alt="Aakash-Thumb" width="300px" height="249px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.webp" alt="footer-slider2-150x150" width="300px" height="249px">
       </marquee></div>
   <br><br>
-    <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.jpg" alt="Wipro" width="237px" height="210px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.jpg" alt="infosys" width="237px" height="210px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.jpg" alt="TCS" width="237px" height="210px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.jpg" alt="Speridian" width="237px" height="210px">
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Logo-9.jpg" alt="ibs" width="237px" height="194px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/CTS.jpg" alt="CTS" width="237px" height="194px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/sib.jpg" alt="sib" width="237px" height="210px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.jpg" alt="Envestnet" width="237px" height="210px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.jpg" alt="EY " width="237px" height="210px">
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.jpg" alt="UST" width="237px" height="210px">
+    <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="20"><img src="../images/Wipro.webp" alt="Wipro" width="237px" height="210px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.webp" alt="infosys" width="237px" height="210px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.webp" alt="TCS" width="237px" height="210px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.webp" alt="Speridian" width="237px" height="210px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Logo-9.webp" alt="ibs" width="237px" height="194px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/CTS.webp" alt="CTS" width="237px" height="194px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/sib.webp" alt="sib" width="237px" height="210px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.webp" alt="Envestnet" width="237px" height="210px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.webp" alt="EY " width="237px" height="210px">
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
   </marquee>
   <br><br><br><br></font>
       <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500px">
