--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <br>
   </p><p align="justify">The Institute offers the Only NBA Accredited MCA Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.</p>
   <br><br>
-    &emsp;&nbsp;<img src="../IMG_20220513_151240.webp" alt="Saintgits Edge" width="720px" height="600px">
+    &emsp;&nbsp;<img src="../images/IMG_20220513_151240.webp" alt="Saintgits Edge" width="720px" height="600px">
   <br><br>
     <center><h2 style="color:Brown;">O u r  &nbsp; &nbsp; C o u r s e s</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
   <center><b style="color:darkgreen">MCA</b></center><br>
