--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="english"><head>
   <title>&ensp;Saintgits MCA Department</title>
   <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
   <link rel="canonical" href="https://saintgits-mca.github.io">
