--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="canonical" href="https://saintgits-mca.github.io">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="title" content="Saintgits MCA Department">
-  <meta name="description" content="Programme in Kerala (120 Seats) and Integrated MCA Programme (60 Seats) for students after +2.">
+  <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
    </head>
