--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
    </head>
-  <body><font size="5">
+  <body style="font-size:20">
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
   <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
   <br>
-  <center style="font-size:20;"><b>
+  <center><b>
   &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
   &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
   &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
@@ -82,7 +82,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.webp" alt="EY " width="237px" height="210px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
   </marquee>
-  <br><br><br><br></font>
+  <br><br><br><br>
       <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500px">
   <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
