--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
    </head>
-  <body style="font-size:20">
+  <body style="font-size:25">
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
-  <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
+  <div class="topnav" style="background-color:red;border:9px solid red;font-size:20;height:50px;" align="left">
   <br>
   <center><b>
   &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
