--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
    </head>
-  <body style="text-size:30";>
+  <body style="text-size:30px;">
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
   <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
   <br>
-  <center style="font-size:20;"><b>
+  <center style="font-size:20px;"><b>
   &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
   &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
   &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
