--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
      <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
-  &nbsp;&nbsp;<b style="color:orangered;" text-align="justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
+  &nbsp;&nbsp;<b style="color:orangered;" style=font-size:20;text-align:justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
   <p style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
   P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
   &nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:navy;text-decoration:none"> +91 481 2430349</a>, <a href="tel:2436169" style="color:navy;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:navy;text-decoration:none">2436170</a> <br>
