--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
    </head>
-  <body style="font-size:23px;">
+  <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
   <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
@@ -27,7 +27,7 @@
   </div>
   <center><img src="../images/Admin-Block.webp" alt="Admin-Block.webp" width="900px" height="250px"></center>
   <div class="topnav" style="background-color:lightgrey" width="200">
-  <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
+  <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px" style="font-size:22px"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
 ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustainable Solutions, hosted by Lousiana Tech University, Ruston, USA. &emsp;&emsp;***&emsp;&emsp;
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
