--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustain
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
   </div><br>
+  <div style="font-size:26"
   <h1 style="color:brown;" align="center"><b>Master Of Computer Applications Department</b></h1>
   <center><p style="color:red">============<p1 style="color:blue">=============</p1></p></center>
   
@@ -52,7 +53,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <br><br>
   <b></b><ul style="list-style-type:square"><b>Eligibility</b><br><br><i> </i><li><i>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ul>
     <br>
-  
+  </div>
   <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70px">
   <center><img src="../images/Campus-Life-4-768x189.webp" alt="Campus Life" width="768px" height="237px"></center><br>
   <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
