--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustain
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
   </div><br>
-  <div style="font-size:26;">
+  <div style="font-size:26px">
   <h1 style="color:brown;" align="center"><b>Master Of Computer Applications Department</b></h1>
   <center><p style="color:red">============<p1 style="color:blue">=============</p1></p></center>
   
