--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <br><br>
   <b></b><ul style="list-style-type:square"><b>Eligibility</b><br><br><i> </i><li><i>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ul>
     <br>
-  </div>
   <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70px">
   <center><img src="../images/Campus-Life-4-768x189.webp" alt="Campus Life" width="768px" height="237px"></center><br>
   <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
@@ -82,7 +81,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Envestnet.webp" alt="Envestnet" width="237px" height="210px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/EY.webp" alt="EY " width="237px" height="210px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
-  </marquee>
+  </marquee> </div>
   <br><br><br><br>
       <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500px">
   <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
