--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
   </marquee> </div>
   <br><br><br><br>
-      <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);" text-align="left" width="500px">
+      <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);font-size:21px;" text-align="left" width="500px">
   <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
