--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
-  <div class="topnav" style="background-color:red;border:9px solid red;height:50px;" align="left">
+  <div class="topnav" style="background-color:red;border:9px solid red;height:50px;width:980" align="left">
   <br>
   <center style="font-size:20px;"><b>
   &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
