--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
   &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br>
 <div align="center">
-    <br>Visit Our repo:<a href="http://github.com/saintgits-mca/saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/GitHub.webp" alt="Github" width="40" height="40"></a><br><br>
-    &emsp;&emsp;<a href="http://facebook.com" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
-    &emsp;&emsp;<a href="http://instagram.com" target="_blank"><img src="https://saintgits-mca.github.io/images/instagram.webp" alt="Instagram" width="40" height="40"></a>
-    &emsp;&emsp;<a href="http://twitter.com" target="_blank"><img src="https://saintgits-mca.github.io/images/twitter.webp" alt="Twitter"  width="40" height="40"></a>
-    &emsp;&emsp;<a href="http://linkedin.com" target="_blank"><img src="https://saintgits-mca.github.io/images/linkedin.webp" alt="Linked-in" width="40" height="40"></a>
+    <br>Visit Our repo:<a href="https://github.com/saintgits-mca/saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/GitHub.webp" alt="Github" width="40" height="40"></a><br><br>
+    &emsp;&emsp;<a href="https://facebook.com" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
+    &emsp;&emsp;<a href="https://instagram.com" target="_blank"><img src="https://saintgits-mca.github.io/images/instagram.webp" alt="Instagram" width="40" height="40"></a>
+    &emsp;&emsp;<a href="https://twitter.com/intent/tweet?url=https://saintgits-mca.github.io/&text=Saintgits%20MCA%20Department" target="_blank"><img src="https://saintgits-mca.github.io/images/twitter.webp" alt="Twitter"  width="40" height="40"></a>
+    &emsp;&emsp;<a href="https://linkedin.com" target="_blank"><img src="https://saintgits-mca.github.io/images/linkedin.webp" alt="Linked-in" width="40" height="40"></a>
   </div>
   </div>
   <div class="topnav" style="background-color:rgb(32,79,179)">
