--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
   &nbsp;&nbsp;Admissions Officer<br>
   &nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
-  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br>
+  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a>
 <div align="center">
     <br>Visit Our repo:<a href="https://github.com/saintgits-mca/saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/GitHub.webp" alt="Github" width="40" height="40"></a><br><br>
     &emsp;&emsp;<a href="https://facebook.com" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
