--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
 <div align="center">
     <br>Visit Our repository:&emsp;<a href="https://github.com/saintgits-mca/saintgits-mca.github.io/" target="_blank" style="text-decoration:none;"><img src="https://saintgits-mca.github.io/images/GitHub.webp" alt="Github" width="40" height="40">&nbsp;Github</a><br><br>
    &emsp;&emsp;<a href="https://www.facebook.com/sharer/sharer.php?u=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
-    &emsp;&emsp;<a href="https://whatsapp.com/send?text=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/whatsapp.webp" alt="Whatsapp" width="40" height="40"></a>
+    &emsp;&emsp;<a href="https://web.whatsapp.com/send?text=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/whatsapp.webp" alt="Whatsapp" width="40" height="40"></a>
     &emsp;&emsp;<a href="https://twitter.com/intent/tweet?url=https://saintgits-mca.github.io/&text=Saintgits%20MCA%20Department" target="_blank"><img src="https://saintgits-mca.github.io/images/twitter.webp" alt="Twitter"  width="40" height="40"></a>
     &emsp;&emsp;<a href="https://www.linkedin.com/shareArticle?url=https://saintgits-mca.github.io/&title=Saintgits%20MCA%20Department" target="_blank"><img src="https://saintgits-mca.github.io/images/linkedin.webp" alt="Linked-in" width="40" height="40"></a>
   </div>
